[package]
name = "undrift_gps"
version = "0.1.1"
authors = ["Hugh Wang <hghwng@gmail.com>"]

description = "Convert between various coordinate systems: GCJ-02, WGS-84 and BD-09"
license = "MIT"
repository = "https://github.com/hghwng/undrift_gps"
documentation = "https://docs.rs/undrift_gps"
categories = ["science"]
keywords = ["GPS", "China", "GCJ-02", "WGS-84", "BD-09"]

[dependencies]